# GPU_CPU_RealTimeSystem_Performance

./: OpenCV_Functionality.cpp  OpenGLFuntionality.cpp  README.md  glad.c  hw_opengl
OpenCV_Functionality/: CMakeLists.txt  OpenCV_Functionality.cpp
OpenGL/resources/shaders/: shaders.shader
OpenGL_Funtionality/: CMakeLists.txt  IndexBuffer.cpp  OpenGL_Functionality.cpp  glad.c  hw_opengl
OpenGL_Funtionality/resources/GaussianFilterShaders/: shaderGrey.shader  shaders.shader
OpenGL_Funtionality/resources/shaders/: shaderEdgeDetector.shader  shaderGaussian.shader  shaderGrey.shader  shaders.shader
OpenGL_Funtionality/src/: Headers.h  IndexBuffer.cpp  IndexBuffer.h  OpenGL_Functionality.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transformation.cpp  Transformation.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
